--- a/BrowserHistoryLogger/BrowserHistoryLogger.csproj
+++ b/BrowserHistoryLogger/BrowserHistoryLogger.csproj
@@ -70,7 +70,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Models\BrowserHistory.cs" />
+    <Compile Include="Models\BusinessLogic.cs" />
     <Compile Include="Models\ChromeBrowserHistory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
